# apriltag_model_spawner

./: README.md
april_tag_spawner/: CMakeLists.txt  package.xml
april_tag_spawner/launch/: test_april_tag.launch.py
april_tag_spawner/models/Apriltag36_11_00000/: model.sdf
april_tag_spawner/models/Apriltag36_11_00001/: model.sdf
april_tag_spawner/models/Apriltag36_11_00002/: model.sdf
april_tag_spawner/models/Apriltag36_11_00003/: model.sdf
april_tag_spawner/models/Apriltag36_11_00004/: model.sdf
april_tag_spawner/models/Apriltag36_11_00005/: model.sdf
april_tag_spawner/models/Apriltag36_11_00006/: model.sdf
april_tag_spawner/models/Apriltag36_11_00007/: model.sdf
april_tag_spawner/models/Apriltag36_11_00008/: model.sdf
april_tag_spawner/models/Apriltag36_11_00009/: model.sdf
april_tag_spawner/models/Apriltag36_11_00010/: model.sdf
april_tag_spawner/models/Apriltag36_11_00011/: model.sdf
april_tag_spawner/models/Apriltag36_11_00012/: model.sdf
april_tag_spawner/models/Apriltag36_11_00013/: model.sdf
april_tag_spawner/models/Apriltag36_11_00014/: model.sdf
april_tag_spawner/models/Apriltag36_11_00015/: model.sdf
april_tag_spawner/models/april_tag_00/: model.config  model.sdf
april_tag_spawner/models/april_tag_00/materials/scripts/: tag00.material
april_tag_spawner/models/april_tag_01/: model.config  model.sdf
april_tag_spawner/models/april_tag_01/materials/scripts/: tag01.material
april_tag_spawner/models/april_tag_02/: model.config  model.sdf
april_tag_spawner/models/april_tag_02/materials/scripts/: tag02.material
(+1 files in other folders)
